# knowledgebases

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaksignore  .vercelignore  Dockerfile  README.md  SECURITY.md  alembic.ini  design-qa.md  docker-compose.yml  pyproject.toml  vercel.json
.github/: dependabot.yml
alembic/: env.py
app/: __init__.py  bootstrap.py  document_parser_preflight.py  llm_egress_proxy.py  main.py  maintenance.py
artifacts/: postgres-llm-egress-acceptance.json
compliance/: assets-manifest.json  dependency-snapshot.json  license-policy.json  release-rights.template.json
docs/: ACCEPTANCE_EVIDENCE_FORMAT.zh-CN.md  API_AND_MODEL_MANAGEMENT.zh-CN.md  ARCHITECTURE.zh-CN.md  ASSET_PROVENANCE.zh-CN.md  CHAT_REPLAY_ENCRYPTION.zh-CN.md  COMMERCIAL_READINESS_REVIEW.zh-CN.md  DEPENDENCY_LICENSE_AUDIT.zh-CN.md  DOCUMENT_ACCEPTANCE_FIXTURES.zh-CN.md  DOCUMENT_PARSER_SECURITY.zh-CN.md  ENTERPRISE_ACCEPTANCE_STANDARD.zh-CN.md  ENTERPRISE_FINAL_ACCEPTANCE_STANDARD.zh-CN.md  FUNCTIONAL_ACCEPTANCE_STANDARD.zh-CN.md  FUNCTIONAL_ACCEPTANCE_TRUST.zh-CN.md  HOST_ISOLATION_GUARD.zh-CN.md  HOST_STORAGE_ACCEPTANCE.zh-CN.md  KNOWLEDGE_PIPELINE.zh-CN.md  LEGACY_OFFLINE_ADOPTION.zh-CN.md  LINUX_HOST_EVIDENCE_COLLECTOR.zh-CN.md  LLM_TOKEN_COST_GOVERNANCE.zh-CN.md  OFFLINE_REGISTRY_BUNDLE_BUILD.zh-CN.md  OFFLINE_RELEASE_TRUST_CHAIN.zh-CN.md  OFFLINE_RUNTIME_ACCEPTANCE.zh-CN.md  OKF_DEEPSEEK_PHASE1.zh-CN.md  OPERATIONS.zh-CN.md  PERFORMANCE_CAPACITY_MODEL.zh-CN.md  RAG_RETRIEVAL_EVALUATION.zh-CN.md  README.zh-CN.md  RELEASE_SUPPLY_CHAIN_EVIDENCE.zh-CN.md  (+9 more)
(+486 files in other folders)
