[project]
name = "enterprise-knowledge-base"
version = "0.1.0"
description = "Enterprise knowledge-base backend with dynamic RBAC and S3-compatible storage"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "boto3>=1.39,<2",
  "email-validator>=2.2,<3",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.10,<3",
  "psycopg[binary]>=3.2,<4",
  "pwdlib[argon2]>=0.2,<1",
  "pyjwt[crypto]>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "redis[hiredis]>=6,<8",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21,<1",
  "mypy>=1.16,<2",
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.0,<2",
  "pytest-cov>=6.2,<8",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.vercel]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --disable-warnings"

[tool.coverage.run]
branch = true
source = ["app"]
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
